--- a/src/app.css
+++ b/src/app.css
@@ -1,3 +1,8 @@
+/* Write your global styles here, in PostCSS syntax */
+/* @tailwind base;
+@tailwind components;
+@tailwind utilities; */
+
 :root {
   font-family: Inter, Avenir, Helvetica, Arial, sans-serif;
   font-size: 16px;
